--- a/RuletaDeLaSuerte.csproj
+++ b/RuletaDeLaSuerte.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Pregunta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VentanaPregunta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VentanaPregunta.Designer.cs">
+      <DependentUpon>VentanaPregunta.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -69,6 +75,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VentanaPregunta.resx">
+      <DependentUpon>VentanaPregunta.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
