--- a/RuletaDeLaSuerte.csproj
+++ b/RuletaDeLaSuerte.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Pregunta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector.cs" />
     <Compile Include="VentanaPregunta.cs">
       <SubType>Form</SubType>
     </Compile>
